@@ -17,7 +17,6 @@ import java.util.List;
 import java.util.Objects;
 
 import static java.util.Collections.emptyList;
-import static java.util.stream.Collectors.toList;
 import static org.apache.commons.lang3.ObjectUtils.isEmpty;
 import static uk.gov.hmcts.divorce.bulkaction.ccd.event.SystemUpdateCase.SYSTEM_UPDATE_BULK_CASE;
 
@@ -57,12 +56,12 @@ public class BulkCaseProcessingService {
             log.info("Processed cases list is empty hence processing all cases in bulk case with id {} ", bulkCaseId);
             return bulkActionCaseData.getBulkListCaseDetails().stream()
                 .filter(erroredCase -> !casesToBeRemoved.contains(erroredCase))
-                .collect(toList());
+                .toList();
         }
 
         log.info("Processed cases with errors in bulk case with id {} ", bulkCaseId);
         return bulkActionCaseData.getErroredCaseDetails().stream()
             .filter(erroredCase -> !casesToBeRemoved.contains(erroredCase))
-            .collect(toList());
+            .toList();
     }
 }
