@@ -32,7 +32,6 @@ import java.util.List;
 import java.util.UUID;
 
 import static java.util.Collections.singletonList;
-import static java.util.stream.Collectors.toList;
 import static uk.gov.hmcts.divorce.divorcecase.model.State.FinalOrderComplete;
 import static uk.gov.hmcts.divorce.divorcecase.model.State.FinalOrderPending;
 import static uk.gov.hmcts.divorce.divorcecase.model.State.FinalOrderRequested;
@@ -137,7 +136,7 @@ public class CaseworkerGrantFinalOrder implements CCDConfig<CaseData, State, Use
                         .label(generalOrderDocument.getDocumentFileName())
                         .code(UUID.randomUUID()).build()
                 )
-                .collect(toList());
+                .toList();
 
         DynamicList generalOrderDocumentNamesDynamicList = DynamicList
             .builder()
