@@ -22,7 +22,6 @@ import uk.gov.hmcts.divorce.document.model.DocumentType;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import static org.apache.commons.collections4.CollectionUtils.emptyIfNull;
 import static uk.gov.hmcts.divorce.divorcecase.model.State.POST_SUBMISSION_STATES;
@@ -169,7 +168,7 @@ public class CaseworkerRemoveDocument implements CCDConfig<CaseData, State, User
                 .filter(divorceDocumentListValue ->
                     divorceDocumentListValue.getValue().getDocumentType() != null
                         && divorceDocumentListValue.getValue().getDocumentType().equals(DocumentType.GENERAL_APPLICATION))
-                .collect(Collectors.toList());
+                .toList();
         }
 
         if (!generalAppDocs.isEmpty()) {
@@ -193,7 +192,7 @@ public class CaseworkerRemoveDocument implements CCDConfig<CaseData, State, User
                 generalApplication.getGeneralApplicationDocuments()
                     .stream()
                     .filter(genAppDoc -> !genAppDoc.getValue().getDocumentLink().equals(document.getDocumentLink()))
-                    .collect(Collectors.toList())
+                    .toList()
             );
         }
     }
@@ -212,7 +211,7 @@ public class CaseworkerRemoveDocument implements CCDConfig<CaseData, State, User
                     generalApplication.getGeneralApplicationDocuments()
                         .stream()
                         .filter(genAppDoc -> !genAppDoc.getValue().getDocumentLink().equals(document.getDocumentLink()))
-                        .collect(Collectors.toList())
+                        .toList()
                 );
             }
         }
